# simpleDFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rpc_call.md
chunk_node/: CMakeLists.txt  config.json
chunk_node/include/: chunk_node.h  rpc.h
chunk_node/src/: chunk_node.cpp  main.cpp  rpc.cpp
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
display/: node.sh  simpleDFS_chunk  simpleDFS_client  simpleDFS_master
display/master/root/test2/: text.txt
master/: CMakeLists.txt  config.json
master/include/: master.h  rpc.h
master/src/: main.cpp  master.cpp  rpc.cpp
utils/: CMakeLists.txt
utils/include/: define.h  singleton.h  utils.h
utils/src/: define.cpp  utils.cpp
